--- a/templates/nonlogin/navbar.html
+++ b/templates/nonlogin/navbar.html
@@ -16,7 +16,7 @@
                     <a class="nav-link active text-white hover-animation" aria-current="page" href="#">Admin</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link active text-white hover-animation" aria-current="page" href="#">Login</a>
+                    <a class="nav-link active text-white hover-animation" aria-current="page" href="{% url 'user_login' %}">Login</a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link text-white hover-animation" href="#">Register</a>
