--- a/templates/nonlogin/user_login.html
+++ b/templates/nonlogin/user_login.html
@@ -3,9 +3,94 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>User Login</title>
+    {% load static %}
+    {% include 'includes/include.html' %}
+    <script>
+        function fields_check(event){
+            username = document.getElementById("username").value
+            password = document.getElementById("password").value
+            if(username == "" || password==""){
+                event.preventDefault()
+                swal("Error!", "Fill all your Details!", "error");
+            }
+        }
+    </script>
+    <style>
+        @media (min-width: 768px) {
+            .full-height-image {
+                height: 94vh;
+            }
+        }
+        @media (max-width: 768px){
+            .margin-bottom-footer {
+                margin-bottom: 40px;
+            }
+            .full-height-image {
+                margin-top: 20px;
+            }
+        }
+    </style>
 </head>
 <body>
-    
+    {% include 'nonlogin/navbar.html' %}
+    <div class="container-fluid mt-5" id="top_margin">
+        <div class="row">
+            <div class="col-md-8 order-md-2">
+                <img src="{% static '/images/background_images/login_image_cyberpunk.jpg' %}" class="img-fluid full-height-image" alt="Background Image" />
+            </div>
+            <div class="col-md-4 order-md-1 mt-5">
+                <h1 class="text-center mt-4"><img src="{% static '/images/icons/navbar_icon.png' %}" style="height: 50px; width: 50px;" alt="logo" /> <strong>Blogs & News</strong></h1>
+                <h3 class="text-center mt-2">Login</h3>
+                <div class="mt-4 text-center">
+                    Don't have an account? <a href="#" style="color: orange;">Register Now!</a>
+                </div>
+                <form method="post" action="{% url 'user_login' %}">
+                    {% csrf_token %}
+                    <div class="form-group mt-3">
+                        <div class="row">
+                            <div class="col-md-10 col-12 offset-md-1">
+                                <label for="username">Username</label>
+                                <input type="text" class="form-control" id="username" name="username">
+                            </div>
+                        </div>
+                    </div>
+                    <div class="form-group mt-3">
+                        <div class="row">
+                            <div class="col-md-10 col-12 offset-md-1">
+                                <label for="password">Password</label>
+                                <div class="input-group">
+                                    <input type="password" class="form-control" id="password" name="password">
+                                    <div class="input-group-append">
+                                        <button class="btn btn-outline-secondary" onclick="togglePasswordVisibility()" type="button" id="toggleButton">
+                                            <img src="{% static '/images/icons/show_password.png' %}" style="height: 20px; width: 20px;" alt="show" />
+                                        </button>
+                                    </div>
+                                </div>
+                                <a href="#" style="color: orange;">Forgot password?</a>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="text-center">
+                        <button type="submit" onclick="fields_check(event)" style="width: 82%;" class="btn btn-primary btn-block mt-4">Login</button>
+                    </div>
+                    <div class="mt-3 text-center">
+                        <div class="mt-4 text-danger">
+                            <div class="row">
+                                <div class="col-10 offset-1 margin-bottom-footer">
+                                    Copyright &copy; 2023 Blogs & News, LLC Website is a trademark of this website
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    {% if error_message %}
+                        <script>
+                            swal("Error!", "Invalid username or password!", "error");
+                        </script>
+                    {% endif %}
+                </form>
+            </div>
+        </div>
+    </div>
 </body>
 </html>
